hphp/hack/test/enum_supertyping/typing/function_return.bad.php.exp
File "function_return.bad.php", line 18, characters 10-13:
Invalid return type (Typing[4110])
  File "function_return.bad.php", line 17, characters 19-19:
  Expected `F`
  File "function_return.bad.php", line 12, characters 6-6:
  But got `arraykey` arising from an implicit `as arraykey` constraint on this type
